--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -133,6 +133,7 @@
                 android:layout_weight="2"
                 android:background="@drawable/headimage"
                 android:onClick="categorystart" />
+
         </LinearLayout>
     </LinearLayout>
     <!--Top Bar Ends -->
@@ -158,7 +159,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Services Offered" />
+            android:text="Our Services" />
 
         <!-- Meal Tab -->
         <com.google.android.material.tabs.TabItem
